--- a/public/polyomino.html
+++ b/public/polyomino.html
@@ -3,11 +3,10 @@
 <body>
 <canvas id="myCanvas" width="7000" height="4000" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
+<script src = "./javascripts/main.js"></script>
 <script>
     //drawPolyomino("nnennesse.enessss.wnnwsswnnwsw",10,1000,20,0,0,4000,1500);
-    import Drawing from "./javascripts/drawing.js";
-    const drawing = new Drawing();
-    drawing.tileAllCanvases();
+    
 </script>
 </body>
 </html>
